; ModuleID = '/home/carl/AnghaBench/anypixel/firmware/controller/ThirdParty/lwip-1.4.1/port/STM32F4x7/Standalone/extr_ethernetif.c_ethernetif_init.c'
source_filename = "/home/carl/AnghaBench/anypixel/firmware/controller/ThirdParty/lwip-1.4.1/port/STM32F4x7/Standalone/extr_ethernetif.c_ethernetif_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.netif = type { i8*, i32, i32, i32* }

@.str = private unnamed_addr constant [14 x i8] c"netif != NULL\00", align 1
@IFNAME0 = common dso_local global i32 0, align 4
@IFNAME1 = common dso_local global i32 0, align 4
@etharp_output = common dso_local global i32 0, align 4
@low_level_output = common dso_local global i32 0, align 4
@ERR_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ethernetif_init(%struct.netif* %0) #0 {
  %2 = alloca %struct.netif*, align 8
  store %struct.netif* %0, %struct.netif** %2, align 8
  %3 = load %struct.netif*, %struct.netif** %2, align 8
  %4 = icmp ne %struct.netif* %3, null
  %5 = zext i1 %4 to i32
  %6 = call i32 @LWIP_ASSERT(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = load i32, i32* @IFNAME0, align 4
  %8 = load %struct.netif*, %struct.netif** %2, align 8
  %9 = getelementptr inbounds %struct.netif, %struct.netif* %8, i32 0, i32 3
  %10 = load i32*, i32** %9, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 0
  store i32 %7, i32* %11, align 4
  %12 = load i32, i32* @IFNAME1, align 4
  %13 = load %struct.netif*, %struct.netif** %2, align 8
  %14 = getelementptr inbounds %struct.netif, %struct.netif* %13, i32 0, i32 3
  %15 = load i32*, i32** %14, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 1
  store i32 %12, i32* %16, align 4
  %17 = load i32, i32* @etharp_output, align 4
  %18 = load %struct.netif*, %struct.netif** %2, align 8
  %19 = getelementptr inbounds %struct.netif, %struct.netif* %18, i32 0, i32 2
  store i32 %17, i32* %19, align 4
  %20 = load i32, i32* @low_level_output, align 4
  %21 = load %struct.netif*, %struct.netif** %2, align 8
  %22 = getelementptr inbounds %struct.netif, %struct.netif* %21, i32 0, i32 1
  store i32 %20, i32* %22, align 8
  %23 = load %struct.netif*, %struct.netif** %2, align 8
  %24 = call i32 @low_level_init(%struct.netif* %23)
  %25 = load i32, i32* @ERR_OK, align 4
  ret i32 %25
}

declare dso_local i32 @LWIP_ASSERT(i8*, i32) #1

declare dso_local i32 @low_level_init(%struct.netif*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
